add java mixin raml add toref toresid helper methods